--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -54,8 +54,8 @@ h1{
 }
 
 .split.right{
-  left:0;
-  background:url('/img/dark2.jpg') center center no-repeat;
+  right:0;
+  background:url('/img/light2.jpg') center center no-repeat;
   background-size: cover;
 }
 
@@ -65,4 +65,45 @@ h1{
   width:100%;
   height:100%;
   background: var(--right-bg-color);
+}
+
+.split.left, .split.right, .split.right:before, .split.left:before{
+  transition:var(--speed) all ease-in-out;
+}
+
+.hover-left .left{
+  width:var(-hover-width);
+}
+
+.hover-left .right{
+  width:var(--other width);
+}
+
+.hover-left .right:before{
+  z-index:2;
+}
+
+.hover-right .right{
+  width: var(--hover-width);
+}
+
+.hover-right .left{
+  width:var(--other-width);
+}
+
+.hover-right .split.left:before{
+  z-index:2;
+}
+
+@media(max-width:800px){
+  h1{
+    font-size: 2rem;
+  }
+}
+
+#canvas-container{
+  background-color: white;
+  position:absolute;
+  top:40%;
+  left:50%;
 }
