--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,10 +1,10 @@
-div.scrollmenu {
+ /* div#scrollmenu {
     background-color: white;
     overflow: scroll;
     white-space: nowrap;
 }
 
-div.scrollmenu a {
+div#scrollmenu a {
     display: inline-block;
     color: white;
     text-align: center;
@@ -12,11 +12,26 @@ div.scrollmenu a {
     text-decoration: none;
 }
 
-div.scrollmenu a:hover {
+div#scrollmenu a:hover {
     background-color: #777;
+} */
+
+#aboutus {
+     width: 150px;
+    height: 150px;
+     margin: 0, auto;
+    max-width: 100%;
+    /* overflow: hidden; */
+    /* float: left; */
 }
 
-img {
-    width: 300px;
-    height: 300px;
+img { 
+     width: 300px; 
+    height: 300px; 
+    /* display: inline-block; */
+    vertical-align: text-bottom;
 }
+
+#maintext {
+    margin-bottom: 0%;
+} 
