finished text storage

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -16,22 +16,6 @@ div#scrollmenu a:hover {
     background-color: #777;
 } 
 
-/* #aboutus { */
-     /* width: 150px; */
-    /* height: 150px; */
-     /* margin: 0, auto; */
-    /* max-width: 100%; */
-    /* overflow: hidden; */
-    /* float: left; */
-/* } */
-
-/* img { 
-     width: 300px; 
-    height: 300px; 
-    /* display: inline-block; */
-    /* vertical-align: text-bottom; */
-/* } */ 
-
 #maintext {
     margin-bottom: 0%;
 }
@@ -46,4 +30,53 @@ ul > li {
     text-align: center;
     display: inline-block;
     margin: 70px;
+}
+
+#scrollmenu > section{
+    display:inline-block;
+    margin-right:2%;
+}
+
+#scrollmenu > section > h2{
+    text-align: center;
+    font-size:20px;
+}
+
+#scrollmenu{
+    margin-top:30px;
+    margin-left:20px;
+}
+
+#scrollmenu > section > img{
+    border: solid 2px; black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#scrollmenu{
+    
+    
 }
