--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -107,6 +107,7 @@ h1{
   text-transform: uppercase;
   background-color:rgba(245, 246, 253, 0.6);
   text-decoration: none;
+  border: solid 2px white;
 }
 
 #submit:hover{
@@ -163,20 +164,33 @@ h1{
   border-radius: 1px;
   text-transform: uppercase;
   background-color:rgba(245, 246, 253, 0.6);
+  border: solid 2px white;
+}
+
+#save:hover{
+  background-color: var(--button-hover-color);
 }
 nav{
   position: absolute;
   padding:1%;
-  left:85%;
+  right:0%;
   margin-top:1%;
   overflow: hidden;
 }
 
 nav>ul>li{
-  display:inline;
-  padding:7%;
-  margin-right:3%;
+  margin-bottom:6px;
+  width:200px;
+  height:25px;
   background-color:rgba(245, 246, 253, 0.6);
+  padding:10px;
+  padding-top:20px;
+  text-align: center;
+  border:solid 2px white;
+}
+
+nav>ul>li:hover{
+  background-color: var(--button-hover-color);
 }
 
 nav>ul>li>a{
@@ -185,9 +199,7 @@ nav>ul>li>a{
   font-family: sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
-  font-size:12px;
+  font-size:14px;
 }
 
-nav>ul{
 
-}
