--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -175,31 +175,24 @@ nav{
   padding:1%;
   right:0%;
   margin-top:1%;
-  overflow: hidden;
 }
 
-nav>ul>li{
-  margin-bottom:6px;
-  width:200px;
-  height:25px;
-  background-color:rgba(245, 246, 253, 0.6);
-  padding:10px;
-  padding-top:20px;
-  text-align: center;
-  border:solid 2px white;
-}
 
-nav>ul>li:hover{
+nav>ul>li>a>button:hover{
   background-color: var(--button-hover-color);
 }
 
-nav>ul>li>a{
+nav>ul>li>a>button{
   text-decoration: none;
   color:black;
   font-family: sans-serif;
   font-weight: lighter;
   text-transform: uppercase;
   font-size:14px;
+  width: 200px;
+  height:50px;
+  background-color:rgba(245, 246, 253, 0.6);
+  border:solid 2px white;
+  margin-top:10px;
 }
-
 
