--- a/css/general.css
+++ b/css/general.css
@@ -2,34 +2,30 @@
     --button-hover-color: rgba(84, 76, 172, 0.5);
 }
 
-nav>ul>li>a{
-  text-decoration: none;
-  color:black;
-  font-family: sans-serif;
-  font-weight: lighter;
-  text-transform: uppercase;
-  font-size:14px;
-}
-
-nav>ul>li:hover{
+nav>ul>li>a>button:hover{
   background-color: var(--button-hover-color);
 }
 
-nav>ul>li{
-  margin-bottom:6px;
-  width:200px;
-  height:25px;
-  background-color:rgba(245, 246, 253, 0.6);
-  padding:10px;
-  padding-top:20px;
-  text-align: center;
-  border:solid 2px white;
+nav>ul>li>a>button{
+  text-decoration: none;
+  color:white;
+  font-weight:bold;
+  text-transform: uppercase;
+  font-size:16px;
+  width: 200px;
+  height:50px;
+  background-color:rgba(245, 246, 253, 0.4);
+  border:2px solid rgb(241, 234, 243,.6);
+  margin-top:10px;
+  font-family: 'Arima Madurai', cursive;
+  letter-spacing: 2px;
 }
 
 nav{
-  position: absolute;
+  /* position: absolute; */
   padding:1%;
   right:0%;
-  margin-top:1%;
+  margin-top:1;
   overflow: hidden;
+  text-align: right;
 }
