--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,119 @@
-h1{
-  font-size:40px;
-  padding:3%;
+:root{
+  --left-bg-color: rgba(39, 8, 56, 0.85);
 }
+
+body{
+  background: url('/img/dark.jpg')center center no-repeat;
+  box-shadow:  inset 0 0 0 1000px var(--left-bg-color);
+  background-size: cover;
+  height:1500px;
+  margin:0;
+  padding:0;
+}
+
+h1{
+  font-size:80px;
+  padding:3%;
+  float:left;
+  margin-top:60px;
+  margin-left:100px;
+  color: rgba(245, 246, 253,.5);
+  font-weight: bold;
+  font-family: 'Srisakdi', cursive;
+  letter-spacing: 2px;
+}
+
+#header{
+  margin-bottom:50px;
+}
+
+nav>ul:first-child{
+  margin-top:20px;
+}
+
+
+.container{
+  margin:auto;
+  background-color:rgba(245, 246, 253,.2);
+  width:1000px;
+  height:650px;
+  padding:20px; 
+  border:2px solid rgb(241, 234, 243,.6);
+  box-shadow: 0 15px 50px rgba(0,0,0,.5);
+  margin-bottom:50px;
+}
+
+#sigil-pic{
+  width:550px;
+  border-radius:50%;
+  float:left;
+  shape-outside:circle();
+  padding:3%;
+  opacity:.8;
+}
+
+#sigil-pic:hover{
+  box-shadow:  inset 0 0 0 1000px rgba(172, 151, 177, 0.3);
+}
+
+#main{
+  margin-top:40px;
+  font-size:28px;
+  margin-left:30px; 
+  width:880px;
+  font-family: 'Arima Madurai', cursive;
+  color:rgba(255, 255, 255, 0.74);
+}
+
+.container h3{
+  font-size:20px;
+  position: relative;
+  top:20px;
+  left:20px;
+  color:rgba(245, 246, 253,.5);
+  font-family: 'Arima Madurai', cursive;
+  text-transform:uppercase;
+}
+
+.sigil-info{
+  margin:auto;
+  background-color:rgba(245, 246, 253,.2);
+  width:1000px;
+  height:1000px;
+  padding:20px; 
+  border:2px solid rgb(241, 234, 243,.6);
+  box-shadow: 0 15px 50px rgba(0,0,0,.5);
+}
+
+h2{
+  font-size: 40px;
+  margin-left:200px;
+  margin-bottom:35px;
+  color: rgba(245, 246, 253,.5);
+  font-weight: bold;
+  font-family: 'Srisakdi', cursive;
+  letter-spacing: 2px;
+}
+
+ section > img{
+  width:250px;
+  height:250px;
+  border-radius: 50%;
+}
+
+ section{
+  /* width:250px; */
+  display:inline;
+  /* float:left;
+  padding:5%; */
+  
+}
+/* #img_one{
+  float:left;
+}
+
+#img_two{
+  float:left;
+} */
+
+
