--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -99,15 +99,25 @@ h1{
   margin-top:2.5%;
 }
 
+#mood > label{
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
 #submit{
   margin-top:3%;
   width:120px;
   height:33px;
   border-radius: 1px;
   text-transform: uppercase;
-  background-color:rgba(245, 246, 253, 0.6);
+  background-color:rgba(187, 191, 216, 0.6);
   text-decoration: none;
   border: solid 2px white;
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size:15px;
 }
 
 #submit:hover{
@@ -148,8 +158,11 @@ h1{
   font-size: 20px;
   background-color:transparent;
   border: solid 2px white;
+  outline:none;
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
+  text-transform: uppercase;
   color:white;
-  outline:none
 }
 
 #input{
@@ -162,9 +175,12 @@ h1{
   width:120px;
   height:33px;
   border-radius: 1px;
-  text-transform: uppercase;
-  background-color:rgba(245, 246, 253, 0.6);
+  background-color:rgba(187, 191, 216, 0.6);
   border: solid 2px white;
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size:15px;
 }
 
 #save:hover{
@@ -184,14 +200,14 @@ nav>ul>li>a>button:hover{
 
 nav>ul>li>a>button{
   text-decoration: none;
-  color:black;
-  font-family: sans-serif;
-  font-weight: lighter;
+  color:white;
+  font-family: 'Arima Madurai', cursive;
+  font-weight: bold;
   text-transform: uppercase;
-  font-size:14px;
+  font-size:16px;
   width: 200px;
   height:50px;
-  background-color:rgba(245, 246, 253, 0.6);
+  background-color:rgba(187, 191, 216, 0.6);
   border:solid 2px white;
   margin-top:10px;
 }
