--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,12 +1,32 @@
-
-div#scrollmenu {
-    background-color: white;
-    overflow: scroll;
-    white-space: nowrap;
-    
+body{
+    height:1000px;
+    background:url('/img/letter-background.jpg');
+    box-shadow:  inset 0 0 0 1000px var(--left-bg-color);
+    background-size: cover;
 }
 
-div#scrollmenu a {
+h1{
+    font-size:80px;
+    padding:3%;
+    float:left;
+    margin-top:60px;
+    margin-left:100px;
+    color: rgba(245, 246, 253,.5);
+    font-weight: bold;
+    font-family: 'Srisakdi', cursive;
+    letter-spacing: 2px;
+  }
+
+  
+
+#scrollmenu {
+    overflow: scroll;
+    white-space: nowrap;  
+    padding:3%;
+    /* background-color:rgba(245, 246, 253,.4); */
+}
+
+#scrollmenu a {
     display: inline-block;
     color: white;
     text-align: center;
@@ -14,37 +34,6 @@ div#scrollmenu a {
     text-decoration: none;
 }
 
-div#scrollmenu a:hover {
-    background-color: #777;
-} 
-
-
-
-div#title {
-    text-align: center;
-    font-size: 30px;
-    padding: 30px;
-}
-
-
-
-#maintext {
-    margin-bottom: 0%;
-}
-
-h1 {
-    text-align: center;
-    margin: auto;
-    font-size: 40px;
-    /* background-color: blue; */
-}
-
-
-ul > li {
-    text-align: center;
-    display: inline-block;
-    margin: 70px;
-}
 
 #scrollmenu > section{
     display:inline-block;
@@ -53,7 +42,11 @@ ul > li {
 
 #scrollmenu > section > h2{
     text-align: center;
-    font-size:20px;
+    font-size:23px;
+    margin-bottom:20px;
+    background-color:rgba(245, 249, 253, 0.4);
+    height:50px;
+
 }
 
 #scrollmenu{
@@ -62,7 +55,9 @@ ul > li {
 }
 
 #scrollmenu > section > img{
-    border: solid 2px; black;
+    border: solid 410x black;
+    width:300px;
+    background-color:rgba(245, 249, 253, 0.829);
 }
 
 
