--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,43 +1,35 @@
 body{
-    height:1000px;
+    height:1600px;
     background:url('/img/letter-background.jpg');
-    box-shadow:  inset 0 0 0 1000px var(--left-bg-color);
+    box-shadow:  inset 0 0 0 1000px rgba(32, 5, 75, 0.8);
     background-size: cover;
 }
 
 h1{
-    font-size:80px;
+    font-size:100px;
     padding:3%;
     float:left;
     margin-top:60px;
-    margin-left:100px;
+    margin-left:470px;
     color: rgba(245, 246, 253,.5);
     font-weight: bold;
     font-family: 'Srisakdi', cursive;
-    letter-spacing: 2px;
+    letter-spacing: 20px;
   }
 
-  
+#header{
+      margin-bottom: 50px;
+  }
 
 #scrollmenu {
     overflow: scroll;
     white-space: nowrap;  
-    padding:3%;
-    /* background-color:rgba(245, 246, 253,.4); */
+    padding:5%;
 }
-
-#scrollmenu a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-}
-
 
 #scrollmenu > section{
     display:inline-block;
-    margin-right:2%;
+    margin-right:4%;
 }
 
 #scrollmenu > section > h2{
@@ -45,25 +37,71 @@ h1{
     font-size:23px;
     padding-top:20px;
     margin-bottom:20px;
-    background-color:rgba(245, 249, 253, 0.4);
+    background-color:rgba(135, 89, 146, 0.4);
     height:40px;
     font-family: 'Arima Madurai', cursive;
     text-transform:uppercase;
     font-weight: bold;
     color:white;
+    box-shadow: 0 15px 50px rgba(0,0,0,.8);
 
-}
-
-#scrollmenu{
-    margin-top:30px;
-    margin-left:20px;
 }
 
 #scrollmenu > section > img{
     border: solid 410x black;
     width:300px;
     background-color:rgba(245, 249, 253, 0.829);
+    box-shadow: 0 15px 50px rgba(0,0,0,.8);
 }
+
+#saved > h2{
+    text-align: center;
+    color:white;
+    width:200px;
+    font-family: 'Arima Madurai', cursive;
+    font-size:30px;
+}
+
+#scroll > section > img{
+    border:solid 410x black;
+    width:300px;
+    background-color:rgba(245, 249, 253, 0.829);
+    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+}
+#scroll> section > h2{
+    text-align: center;
+    font-size:23px;
+    padding-top:20px;
+    margin-bottom:20px;
+    background-color:rgba(135, 89, 146, 0.4);
+    height:40px;
+    font-family: 'Arima Madurai', cursive;
+    text-transform:uppercase;
+    font-weight: bold;
+    color:white;
+    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+}
+
+#scroll{
+    overflow: scroll;
+    white-space: nowrap;  
+    padding:5%;
+}
+
+#scroll > section {
+    display:inline-block;
+    margin-right:4%;
+}
+
+#static > h2{
+    text-align: center;
+    color:white;
+    width:300px;
+    font-family: 'Arima Madurai', cursive;
+    font-size:30px;
+}
+
+
 
 
 
