--- a/css/about_us.css
+++ b/css/about_us.css
@@ -68,7 +68,7 @@ img{
 
  body{
     background: url('/img/dark.jpg')center center no-repeat;
-    box-shadow:  inset 0 0 0 1000px var(--left-bg-color);
+    box-shadow:  inset 0 0 0 1600px rgba(56, 22, 110, 0.5);
     background-size: cover;
     margin:0;
     padding:0;
