--- a/css/about_us.css
+++ b/css/about_us.css
@@ -67,11 +67,12 @@ img{
 }
 
  body{
-    background: url('/img/dark.jpg')center center no-repeat;
-    box-shadow:  inset 0 0 0 1600px rgba(56, 22, 110, 0.5);
-    background-size: cover;
-    margin:0;
-    padding:0;
+  
+  background:url('/img/letter-background.jpg');
+  box-shadow:  inset 0 0 0 1600px rgba(81, 103, 201, 0.616);
+  background-size: cover;
+  margin: 0;
+  padding: 0;
   }
   
   #source {
