--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,7 +1,7 @@
 body{
-    height:1600px;
-    background:url('/img/letter-background.jpg');
-    box-shadow:  inset 0 0 0 1600px rgba(81, 103, 201, 0.616);
+    height:100%;
+    background:url('/img/3.jpg');
+    box-shadow: inset 0 0 0 1000px rgba(145, 187, 235, 0.678);
     background-size: cover;
 }
 
@@ -37,21 +37,21 @@ h1{
     font-size:23px;
     padding-top:20px;
     margin-bottom:20px;
-    background-color:rgba(135, 174, 206, 0.829);
+    background-color:rgba(175, 205, 230, 0.37);
     height:40px;
     font-family: 'Arima Madurai', cursive;
     text-transform:uppercase;
     font-weight: bold;
     color:white;
-    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+    box-shadow: 0 15px 50px rgba(0,0,0,.4);
 
 }
 
 #scrollmenu > section > img{
     border: solid 410x black;
     width:300px;
-    background-color:rgba(135, 174, 206, 0.829);
-    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+    background-color:rgba(175, 205, 230, 0.37);
+    box-shadow: 0 15px 50px rgba(0,0,0,.4);
 }
 
 #saved > h2{
@@ -65,21 +65,21 @@ h1{
 #scroll > section > img{
     border:solid 410x black;
     width:300px;
-    background-color:rgba(135, 174, 206, 0.829);
-    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+    background-color:rgba(175, 205, 230, 0.37);
+    box-shadow: 0 15px 50px rgba(0,0,0,.4);
 }
 #scroll> section > h2{
     text-align: center;
     font-size:23px;
     padding-top:20px;
     margin-bottom:20px;
-    background-color:rgba(135, 174, 206, 0.829);
+    background-color:rgba(175, 205, 230, 0.37);
     height:40px;
     font-family: 'Arima Madurai', cursive;
     text-transform:uppercase;
     font-weight: bold;
     color:white;
-    box-shadow: 0 15px 50px rgba(0,0,0,.8);
+    box-shadow: 0 15px 50px rgba(0,0,0,.4);
 }
 
 #scroll{
@@ -99,6 +99,11 @@ h1{
     width:300px;
     font-family: 'Arima Madurai', cursive;
     font-size:30px;
+}
+
+img{
+    width: 300px;
+    height: 375px;
 }
 
 
