--- a/css/gallery.css
+++ b/css/gallery.css
@@ -13,7 +13,7 @@ h1{
     margin-left:470px;
     color: rgba(245, 246, 253,.9);
     font-weight: bold;
-    font-family: 'Srisakdi', cursive;
+    font-family: 'Astloch', cursive;
     letter-spacing: 20px;
   }
 
