--- a/css/general.css
+++ b/css/general.css
@@ -18,7 +18,7 @@ nav>ul>li>a>button{
   background-color:rgba(245, 246, 253, 0.4);
   border:2px solid rgb(241, 234, 243,.6);
   margin-top:10px;
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   letter-spacing: 2px;
 }
 
