--- a/css/algorithm.css
+++ b/css/algorithm.css
@@ -99,7 +99,7 @@ h1{
 }
 
 #mood > label{
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   font-weight: bold;
   text-transform: uppercase;
 }
@@ -113,7 +113,7 @@ h1{
   background-color:rgba(187, 191, 216, 0.6);
   text-decoration: none;
   border: solid 2px white;
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   font-weight: bold;
   text-transform: uppercase;
   font-size:15px;
@@ -158,7 +158,7 @@ h1{
   background-color:transparent;
   border: solid 2px white;
   outline:none;
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   font-weight: bold;
   text-transform: uppercase;
   color:white;
@@ -176,7 +176,7 @@ h1{
   border-radius: 1px;
   background-color:rgba(187, 191, 216, 0.6);
   border: solid 2px white;
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   font-weight: bold;
   text-transform: uppercase;
   font-size:15px;
@@ -200,7 +200,7 @@ nav>ul>li>a>button:hover{
 nav>ul>li>a>button{
   text-decoration: none;
   color:white;
-  font-family: 'Arima Madurai', cursive;
+  font-family: 'forum', cursive;
   font-weight: bold;
   text-transform: uppercase;
   font-size:16px;
@@ -217,7 +217,7 @@ nav>ul>li>a>button{
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 1;
-  font-family: Open Sans, Arial;
+  font-family: 'Astloch', cursive;
   font-weight: 300;
   font-size: 4em;
   color: #fff;
